@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mjr] Remove maps configuration, replaced by global maps configuration (Bug #14168).
 * [jan] Keep original file names when PUTing images via WebDAV.
 * [jan] Fix closure compiler errors (Bug #13596).
 * [jan] Return ETags with browse() API method.
@@ -1349,6 +1350,7 @@
    <date>2014-02-24</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mjr] Remove maps configuration, replaced by global maps configuration (Bug #14168).
 * [jan] Keep original file names when PUTing images via WebDAV.
 * [jan] Fix closure compiler errors (Bug #13596).
 * [jan] Return ETags with browse() API method.
