@@ -2,6 +2,8 @@
 v3.0.2-git
 ----------
 
+[mjr] Remove maps configuration, replaced by global maps configuration (Bug
+      #14168).
 [jan] Keep original file names when PUTing images via WebDAV.
 [jan] Fix closure compiler errors (Bug #13596).
 [jan] Return ETags with browse() API method.
